@@ -135,6 +135,9 @@
 	* catgets/Makefile (tests): Enabled only if $(build-shared) is
 	yes.
 
+	* stdio-common/Makefile (tests): Add tst-swprintf only if
+	$(build-shared) is yes.
+
 2012-09-06  H.J. Lu  <hongjiu.lu@intel.com>
 
 	[BZ #14544]
